--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,6 +2,7 @@
     padding-bottom: 50px;
     color: white;
     background: linear-gradient(#403e40, #121416);
+    overflow: hidden;
 }
 .banner {
     min-height: 250px;
@@ -26,7 +27,6 @@
 .home__image {
     height: 100vh;
 	width: 100%;
-	/* mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)); */
 }
 
 .menu {
